--- a/SP3/kubernetes/hello/hello-deployment.yaml
+++ b/SP3/kubernetes/hello/hello-deployment.yaml
@@ -26,7 +26,7 @@ spec:
             topologyKey: "kubernetes.io/hostname"
       containers:
       - name: hello-from
-        image: pbitty/hello-from:latest
+        image: pbitty/hello-from:__VERSION__
         ports:
           - name: http
             containerPort: 80
