--- a/SP3/kubernetes/kubernetes-setup/Vagrantfile
+++ b/SP3/kubernetes/kubernetes-setup/Vagrantfile
@@ -14,7 +14,7 @@ Vagrant.configure("2") do |config|
         master.vm.network "public_network", ip: "192.168.1.10"
         master.vm.hostname = "k8s-master"
         master.vm.provision "ansible" do |ansible|
-            ansible.playbook = "kubernetes-setup/master-playbook.yml"
+            ansible.playbook = "master-playbook.yml"
             ansible.extra_vars = {
                 node_ip: "192.168.1.10",
             }
@@ -27,7 +27,7 @@ Vagrant.configure("2") do |config|
             node.vm.network "public_network", ip: "192.168.1.#{i + 10}" 
             node.vm.hostname = "node-#{i}"
             node.vm.provision "ansible" do |ansible|
-                ansible.playbook = "kubernetes-setup/node-playbook.yml"
+                ansible.playbook = "node-playbook.yml"
                 ansible.extra_vars = {
                     node_ip: "192.168.1.#{i + 10}",
                 }
