--- a/SP3/kubernetes/kubernetes-setup/Vagrantfile
+++ b/SP3/kubernetes/kubernetes-setup/Vagrantfile
@@ -5,18 +5,18 @@ Vagrant.configure("2") do |config|
     config.ssh.insert_key = false
 
     config.vm.provider "virtualbox" do |v|
-        v.memory = 2048
+        v.memory = 4096
         v.cpus = 2
     end
       
     config.vm.define "k8s-master" do |master|
         master.vm.box = IMAGE_NAME
-        master.vm.network "private_network", ip: "192.168.50.10"
+        master.vm.network "public_network", ip: "192.168.1.10"
         master.vm.hostname = "k8s-master"
         master.vm.provision "ansible" do |ansible|
-            ansible.playbook = "kubernetes-setup/master-playbook.yml"
+            ansible.playbook = "master-playbook.yml"
             ansible.extra_vars = {
-                node_ip: "192.168.50.10",
+                node_ip: "192.168.1.10",
             }
         end
     end
@@ -24,12 +24,12 @@ Vagrant.configure("2") do |config|
     (1..N).each do |i|
         config.vm.define "node-#{i}" do |node|
             node.vm.box = IMAGE_NAME
-            node.vm.network "private_network", ip: "192.168.50.#{i + 10}"
+            node.vm.network "public_network", ip: "192.168.1.#{i + 10}" 
             node.vm.hostname = "node-#{i}"
             node.vm.provision "ansible" do |ansible|
-                ansible.playbook = "kubernetes-setup/node-playbook.yml"
+                ansible.playbook = "node-playbook.yml"
                 ansible.extra_vars = {
-                    node_ip: "192.168.50.#{i + 10}",
+                    node_ip: "192.168.1.#{i + 10}",
                 }
             end
         end
